<resources>
    <string name="app_name">MyChatBot</string>
    <string name="welcome">Welcome,</string>
    <string name="welcome_back">Welcome back ,</string>
    <string name="register_message">Sign up to start your new Journey</string>
    <string name="sign_in_message">Please sign in to use our feature</string>
    <string name="sign_in">Sign in</string>
    <string name="full_name">Full Name</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="cara_mudah_dan_tepat_buat_laporan_keuangan_anda">Cara Mudah dan Tepat Buat Laporan Keuangan Anda</string>
    <string name="Artanata">Artanata</string>
</resources>